refactor: remove OpenXmlFilterTest and simplify OpenXmlFilter logic
- Refactored OpenXmlFilter to improve null safety and readability.
- Replaced usage of LinkedList with ArrayList for performance optimization.
- Because OpenXmlFilter.doCompactTags never become true in the ordinal execution path, so streamline unreached codes and obsolete OpenXmlFilterTest class.